# gr-sdrv1

./: CMakeLists.txt  LICENSE  MANIFEST.yml  README.md  fm_receiver.py  install.bat  install.sh
.github/workflows/: conda-build.yml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-sdrv1Config.cmake
docs/: CMakeLists.txt  README.sdrv1
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: CMakeLists.txt
grc/: CMakeLists.txt  sdrv1_sdrv1_sink.block.yml  sdrv1_sdrv1_source.block.yml  sdrv1_sdrv1stream_sink.block.yml
include/gnuradio/sdrv1/: CMakeLists.txt  api.h  sdrv1stream_sink.h  version.h.in
lib/: CMakeLists.txt  sdrv1stream_sink_impl.cc  sdrv1stream_sink_impl.h
python/sdrv1/: CMakeLists.txt  __init__.py  _version.py.in  qa_sdrv1_sink.py  qa_sdrv1_source.py  qa_sdrv1stream_sink.py  sdrv1_sink.py  sdrv1_source.py  utils.py
python/sdrv1/bindings/: CMakeLists.txt  python_bindings.cc  sdrv1stream_sink_python.cc
python/sdrv1/bindings/docstrings/: sdrv1stream_sink_pydoc_template.h
recipe/: bld.bat  build.sh  meta.yaml
