# Copyright 2020 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

########################################################################
# Check if there is C++ code at all
########################################################################
if(NOT sdrv1_sources)
    message(STATUS "No C++ sources... skipping python bindings")
    return()
endif(NOT sdrv1_sources)

########################################################################
# Check for pygccxml
########################################################################
gr_python_check_module_raw("pygccxml" "import pygccxml" PYGCCXML_FOUND)

include(GrPybind)

########################################################################
# Python Bindings
########################################################################

list(APPEND sdrv1_python_files
    sdrv1stream_sink_python.cc python_bindings.cc)

gr_pybind_make_oot(sdrv1 ../../.. gr::sdrv1 "${sdrv1_python_files}")

# copy bindings extension for use in QA test module
add_custom_command(
    TARGET sdrv1_python
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:sdrv1_python>
            ${PROJECT_BINARY_DIR}/test_modules/gnuradio/sdrv1/)

install(
    TARGETS sdrv1_python
    DESTINATION ${GR_PYTHON_DIR}/gnuradio/sdrv1
    COMPONENT pythonapi)
